# AlbumPaper

./: .gitignore  AlbumPaper.py  Cargo.toml  README.md  _config.ini  _services.ini  album-art-wallpaper.py  config.py  config_sample.ini  dominantcolor.py  hook-scipy.py  mutex.py  pyproject.toml  requirements.txt  settings.ini  spotify-auth.py  spotify_auth.py  themes.py  ui.py  wallpaper.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  v4-0-pre-release-issue.md
albumpaper/: _services.ini  albumpaper.py  config.py  configspec.ini  configuration.py  imagegen.py  misc.py  mutex.py  services.ini  settings.ini  spotify_code.py  spotifyauth.py  structs.py  ui.py  wallpaper.py  winapi.py
albumpaper/albumpaper_rs/: __init__.py  __init__.pyi
albumpaper/config/: background.ini  global.ini  secrets.ini
albumpaper/config/spec/: background.ini  global.ini
albumpaper/themes/: Dark.py  Light.py  System.py
src/: colors.rs  gradient.rs  lib.rs  misc.rs  noise.rs  resize.rs
themes/: Dark.py  Default.py  Light.py
