[package]
name = "albumpaper_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.10"
rayon = "1.12.0"
libblur = { version = "0.23.3", features = ["image"] }
ordered-float = { version = "5.3.0", default-features = false }
fast_image_resize = {version = "6.0.0", features = ["image"]}
rand = "0.10.1"
rustc-hash = "2.1"

# Colored noise
colorgrad = "0.8.0"
noise = "0.9.0"

geometrize = { git = "https://github.com/jac0-b/geometrize.git" }


[dev-dependencies]
criterion = "0.8.2"

[lib]
name = "albumpaper_rs"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.28.3"
features = ["extension-module"]

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.bench]
debug = true

[[bench]]
name = "benchmark"
harness = false
