[tool.poetry]
name = "AlbumPaper"
version = "3.3"
description = "A system tray app for Windows that will change your desktop wallpaper to the album art of the song you are listening to."
authors = ["jac0b-w"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.0"
spotipy = "^2.18.0"
Pillow = "^8.3.0"
scikit-learn = "^0.24.2"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
